[gd_scene load_steps=31 format=3 uid="uid://bysdn4i581jjc"]

[ext_resource type="Script" uid="uid://ddf7tsdxe0rpy" path="res://Management/states/state_machine.gd" id="1_pjjdi"]
[ext_resource type="Script" uid="uid://djkuxi7g0c5s2" path="res://enemies/scorpion.gd" id="1_v6en7"]
[ext_resource type="Texture2D" uid="uid://l0eall1fr7nk" path="res://assets/enemy/banco_de_assets/scorpion/scorpion_walk.png" id="2_hod70"]
[ext_resource type="PackedScene" uid="uid://dghe1uklhuim0" path="res://Management/composition_scenes/health_component.tscn" id="2_w5574"]
[ext_resource type="PackedScene" uid="uid://dtmpj3pwogil8" path="res://Management/composition_scenes/attack_area.tscn" id="3_14bc2"]
[ext_resource type="Texture2D" uid="uid://bihe2t44tl0ru" path="res://assets/enemy/banco_de_assets/scorpion/scorpion_idle.png" id="3_lw4ab"]
[ext_resource type="Script" uid="uid://cj1c4sytdlrlb" path="res://Management/states/scorpion/scorpion_idle.gd" id="3_sbbdw"]
[ext_resource type="Texture2D" uid="uid://pmihq7xcs4oy" path="res://assets/enemy/banco_de_assets/scorpion/scorpion_death.png" id="4_2pddl"]
[ext_resource type="Script" uid="uid://cw53oj872idmi" path="res://Management/states/scorpion/scorpion_walk.gd" id="4_dirr7"]
[ext_resource type="Texture2D" uid="uid://dp0x4yu0ktq2k" path="res://assets/enemy/banco_de_assets/scorpion/scorpion_hit.png" id="5_8a74g"]
[ext_resource type="Script" uid="uid://dgxw5hr4xe86y" path="res://Management/states/scorpion/scorpion_attack.gd" id="5_qr0hh"]
[ext_resource type="Script" uid="uid://cfp3tiiw3afm2" path="res://Management/states/scorpion/scorpion_hit.gd" id="6_e18mf"]
[ext_resource type="Script" uid="uid://dud4utalvefm8" path="res://Management/states/scorpion/scorpion_death.gd" id="7_wrwk7"]
[ext_resource type="Script" uid="uid://daphi32qby7fe" path="res://Management/states/state.gd" id="8_frrsh"]
[ext_resource type="Texture2D" uid="uid://c7hfwkunooka2" path="res://assets/enemy/banco_de_assets/scorpion/scorpion_attack.png" id="10_nox61"]
[ext_resource type="PackedScene" uid="uid://2bdikhijltvv" path="res://Management/life_label.tscn" id="16_msgvx"]

[sub_resource type="Animation" id="Animation_h166x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_hod70")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../AttackArea/AttackPolygon:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_mmcw6"]
resource_name = "attack"
length = 0.333342
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_nox61")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../AttackArea/AttackPolygon:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0s6mg"]
resource_name = "attack_prepare"
length = 0.500008
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_nox61")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_q6dpn"]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_2pddl")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../AttackArea/AttackPolygon:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_727in"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_8a74g")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../AttackArea/AttackPolygon:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yohg2"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_lw4ab")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../AttackArea/AttackPolygon:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_k435s"]
resource_name = "walk"
length = 0.333342
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_hod70")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../AttackArea/AttackPolygon:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../StateMachine/ScorpionWalk")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.166667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"raycast_enable"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_putix"]
_data = {
&"RESET": SubResource("Animation_h166x"),
&"attack": SubResource("Animation_mmcw6"),
&"attack_prepare": SubResource("Animation_0s6mg"),
&"death": SubResource("Animation_q6dpn"),
&"hit": SubResource("Animation_727in"),
&"idle": SubResource("Animation_yohg2"),
&"walk": SubResource("Animation_k435s")
}

[sub_resource type="Animation" id="Animation_rs1bu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ylykx"]
resource_name = "hit"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(128.498, 0, 0, 1), Color(1, 1, 1, 1), Color(128.498, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o15vl"]
_data = {
&"RESET": SubResource("Animation_rs1bu"),
&"hit": SubResource("Animation_ylykx")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hsw8n"]
radius = 15.0
height = 44.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oglt4"]
radius = 15.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_khbgp"]
size = Vector2(324, 34)

[node name="Scorpion" type="CharacterBody2D" node_paths=PackedStringArray("health_component", "attack_area") groups=["enemy"]]
collision_layer = 2
collision_mask = 45
script = ExtResource("1_v6en7")
health_component = NodePath("HealthComponent")
attack_area = NodePath("AttackArea")
element = "water"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("1_pjjdi")
state = NodePath("ScorpionIdle")

[node name="ScorpionIdle" type="Node" parent="StateMachine" node_paths=PackedStringArray("scorpion", "animation", "idle_timer")]
script = ExtResource("3_sbbdw")
scorpion = NodePath("../..")
animation = NodePath("../../Animation")
idle_timer = NodePath("../../IdleTimer")

[node name="ScorpionWalk" type="Node" parent="StateMachine" node_paths=PackedStringArray("scorpion", "animation", "wall_raycast")]
script = ExtResource("4_dirr7")
scorpion = NodePath("../..")
animation = NodePath("../../Animation")
off_set_wander = 50.0
speed = 200.0
wall_raycast = NodePath("../../WallRaycast")

[node name="ScorpionAttack" type="Node" parent="StateMachine" node_paths=PackedStringArray("scorpion", "animation")]
script = ExtResource("5_qr0hh")
scorpion = NodePath("../..")
animation = NodePath("../../Animation")
attack_distance = 10.0
speed = 200.0

[node name="ScorpionHit" type="Node" parent="StateMachine" node_paths=PackedStringArray("scorpion", "animation")]
script = ExtResource("6_e18mf")
scorpion = NodePath("../..")
animation = NodePath("../../Animation")
knock_multi = 1.5
hit_recover_limit = 10.0

[node name="ScorpionDeath" type="Node" parent="StateMachine" node_paths=PackedStringArray("scorpion", "animation")]
script = ExtResource("7_wrwk7")
scorpion = NodePath("../..")
animation = NodePath("../../Animation")

[node name="State" type="Node" parent="StateMachine"]
script = ExtResource("8_frrsh")

[node name="texture" type="Sprite2D" parent="."]
position = Vector2(0, -24)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_hod70")
hframes = 4

[node name="Animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../texture")
libraries = {
"": SubResource("AnimationLibrary_putix")
}

[node name="HitModulate" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o15vl")
}

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_hsw8n")

[node name="AttackArea" parent="." instance=ExtResource("3_14bc2")]
position = Vector2(0, -24)
collision_mask = 1
target = "player"
damage = 4.0
knockup_force = 10.0
knockback_force = 200.0
poise_damage = 5.0

[node name="AttackPolygon" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-9, 9)
rotation = 1.57079
shape = SubResource("CircleShape2D_oglt4")
disabled = true

[node name="CanAttackArea" type="Area2D" parent="."]
position = Vector2(0, -24)

[node name="CanAttackCollision" type="CollisionShape2D" parent="CanAttackArea"]
position = Vector2(-53, 7)
shape = SubResource("RectangleShape2D_khbgp")

[node name="IdleTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="PoiseTimer" type="Timer" parent="."]
one_shot = true

[node name="WallRaycast" type="RayCast2D" parent="."]
position = Vector2(0, -11)
target_position = Vector2(-26, 0)
collision_mask = 44

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HealthComponent" parent="." node_paths=PackedStringArray("attack_timer") instance=ExtResource("2_w5574")]
max_health = 10.0
max_poise = 3.0
attack_timer = NodePath("../AttackTimer")

[node name="Label" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("16_msgvx")]
offset_top = -80.0
offset_bottom = -57.0
parent = NodePath("..")

[node name="center_damage_area" type="Marker2D" parent="."]
position = Vector2(0, -9)

[connection signal="animation_finished" from="Animation" to="StateMachine/ScorpionAttack" method="_on_animation_finished"]
[connection signal="animation_finished" from="Animation" to="StateMachine/ScorpionHit" method="_on_animation_finished"]
[connection signal="animation_finished" from="Animation" to="StateMachine/ScorpionDeath" method="_on_animation_finished"]
[connection signal="animation_finished" from="HitModulate" to="." method="_on_hit_modulate_animation_finished"]
[connection signal="body_entered" from="AttackArea" to="StateMachine/ScorpionAttack" method="attack_area_entered"]
[connection signal="body_entered" from="CanAttackArea" to="." method="can_attack_area_entered"]
[connection signal="body_exited" from="CanAttackArea" to="." method="can_attack_area_exited"]
[connection signal="timeout" from="PoiseTimer" to="." method="_on_poise_timer_timeout"]
